fix: overflow: hidden必要だった

--- a/docs/application.css
+++ b/docs/application.css
@@ -12,6 +12,7 @@ body {
   background-color: #000;
   width: 320px;
   height: 320px;
+  overflow: hidden;
 }
 
 .p-ball {
